# spin-trigger-cron

./: .gitignore  Cargo.toml  MAINTAINERS.md  README.md  cron.wit  spin-pluginify.toml
.github/workflows/: build.yaml
guest/: Cargo.toml
guest-python/: README.md  app.py  requirements.txt  spin.toml
guest-rust/: Cargo.toml  spin.toml
guest-rust/src/: lib.rs
guest/src/: lib.rs
sdk/: Cargo.toml
sdk/macro/: Cargo.toml
sdk/macro/src/: lib.rs
sdk/src/: lib.rs
src/: lib.rs  main.rs
templates/cron-rust/content/: Cargo.toml  spin.toml
templates/cron-rust/content/src/: lib.rs
templates/cron-rust/metadata/: spin-template.toml
templates/cron-rust/metadata/snippets/: component.txt
