[package]
name = "trigger-cron"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = "1.71"

[workspace.package]
version = "0.1.0"
authors = ["Karthik Ganeshram <karthik.ganeshram@fermyon.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1"
clap = { version = "3.1.15", features = ["derive", "env"] }
serde = "1.0"
spin-core = { git = "https://github.com/fermyon/spin", tag = "v2.0.1" }
spin-trigger = { git = "https://github.com/fermyon/spin", tag = "v2.0.1" }
tokio = { version = "1.23", features = ["full"] }
tokio-cron-scheduler = "0.9.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.7", features = ["env-filter"] }
wasmtime = { git = "https://github.com/fermyon/wasmtime", rev = "a2fa8fe7de1e918eae06d78de53451832ba380b6", features = [
    "component-model",
] }
