[package]
name = "trigger-cron"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = "1.73"

[workspace.package]
version = "0.1.0"
authors = ["Karthik Ganeshram <karthik.ganeshram@fermyon.com>"]
edition = "2021"

[workspace]
members = ["sdk", "sdk/macro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1"
clap = { version = "3.1.15", features = ["derive", "env"] }
serde = "1.0"
spin-core = { git = "https://github.com/fermyon/spin", tag = "v2.3.1" }
spin-trigger = { git = "https://github.com/fermyon/spin", tag = "v2.3.1" }
tokio = { version = "1.23", features = ["full"] }
tokio-cron-scheduler = "0.9.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.7", features = ["env-filter"] }
wasmtime = { version = "18.0.1" }
