[package]
name = "guest"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = "1.71"

[lib]
crate-type = ["cdylib"]

[dependencies]
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.0.1" }
spin-cron-sdk = { git = "https://github.com/karthik2804/spin-trigger-cron/" }
