[package]
name = "guest"
version = "0.1.0"
authors = ["Karthik Ganeshram <karthik.ganeshram@fermyon.com>"]
edition = "2021"
rust-version = "1.71"

[lib]
crate-type = ["cdylib"]

[dependencies]
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.0.1" }
spin-cron-sdk = { git = "https://github.com/fermyon/spin-trigger-cron/" }

[workspace]