[package]
name = "spin-cron-macro"
version = "0.1.0"
edition = "2021"
rust-version = "1.71"
include = ["../../cron.wit"]

[lib]
name = "spin_cron_macro"
proc-macro = true

[dependencies]
anyhow = "1"
bytes = "1"
http = "0.2"
proc-macro2 = "1"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
wit-bindgen = "0.13.1"
